k8s/app/2-efs-pvc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
