k8s/app/3-app-deploy-notlb.yaml
## DEPLOY APP WEB NO NAMESPACE 'APP'

apiVersion: v1
kind: Namespace
metadata:
  name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: httpd:latest
          volumeMounts:
            - name: efs-storage
              mountPath: /var/log/apache2  # Diretório onde os logs serão armazenados no contêiner
      volumes:
        - name: efs-storage
          persistentVolumeClaim:
            claimName: efs-pvc
      imagePullSecrets:
        - name: ecr-credentials

---
## DEPLOY SERVICE WEB APP

apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: app
spec:
  selector:
    app: app
  ports:
    - port: 80
      targetPort: 80
