k8s/app/4-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-service-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  #- host: app.demo.com
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app
            port:
              number: 80
  - host: app.almino.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app
            port:
              number: 80

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: web-service-ingress
#   namespace: app
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$2
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: "app.demo.com"
#     http:
#       paths:
#       - path: /app2(/|$)(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: app
#             port:
#               number: 80

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: web-service-ingress
#   namespace: app
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$2
# spec:
#   ingressClassName: nginx
#   rules:
#   #- host: app.demo.com
#   - http:
#       paths:
#       - path: /app2(/|$)(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: app
#             port:
#               number: 80
